fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/header2.scss
+++ b/src/styles/sass/header2.scss
@@ -15,7 +15,9 @@
       #header-items2{
         @include box(flex, row, space-between, center);
         width:$width-mobile;
-        margin: 11px auto; 
+        margin: auto; 
+        position:relative;
+        top:11px;
 
         #logo2{
           width:37.49px;
